# Pong

./: CMakeLists.txt
include/: clock.h  common.h  game.h  object.h
src/: clock.cpp  game.cpp  main.cpp  object.cpp
